--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
                   opacity: 1;
                   transform: translateY(0%) scale(1) translateZ(0px);
                 ">
-              <a rel="noopener noreferrer" class="mx-2" href="https://twitter.com/GangstaCatCoin
+              <a rel="noopener noreferrer" class="mx-2" href="https://twitter.com/GangstaCatSol_
+
               " target="_blank"><button
                   tabindex="0">
                   <img
@@ -193,7 +194,8 @@
                       opacity: 1;
                       transform: translateY(0%) scale(1) translateZ(0px);
                     ">
-                  <a rel="noopener noreferrer" class="mx-2" href="https://twitter.com/GangstaCatCoin
+                  <a rel="noopener noreferrer" class="mx-2" href="https://twitter.com/GangstaCatSol_
+
                   " target="_blank"><button
                       tabindex="0">
                       <img
